# nexus-gql

./: CONTRIBUTING.MD  Cargo.toml  README-DEV.MD  README.MD  README.md
.cursor/rules/: default.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
projects/batch-downloader-cli/: Cargo.toml
projects/batch-downloader-cli/src/: main.rs
projects/nexus-gql/: Cargo.toml  build.rs
projects/nexus-gql/src/: client.rs  errors.rs  lib.rs  queries.rs  types.rs
projects/nexus-gql/src/schema/: README.MD  get_game.graphql  get_mod_files.graphql  get_popular_mods.graphql  schema.json
