[package]
name = "nexus-gql"
version = "0.1.0"
edition = "2021"
description = "Batch downloader from Nexus Mods, using GraphQL API."
repository = "https://github.com/Sewer56/nexus-gql"
license-file = "../../LICENSE"
include = ["src/**/*"]
readme = "../../README.MD"

[features]
default = ["std"]
std = []

[dependencies]
# GraphQL client
graphql_client = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Large integer support
num-bigint = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
