[package]
name = "nexus-gql"
version = "0.1.0"
edition = "2021"
description = "GraphQL API for Nexus Mods. Built for my own batch downloader (research purposes)."
repository = "https://github.com/Sewer56/nexus-gql"
license-file = "../../LICENSE"
include = ["src/**/*"]
readme = "../../README.MD"

[features]
default = ["std"]
std = []

[dependencies]
# GraphQL client
graphql_client = "0.14"

# HTTP client with retry middleware
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.7"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Byte size handling
bytesize = "2.0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
